--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+        fetch-depth: 0
 
       - 
         name: Find the latest release mbed-os version
