--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-        fetch-depth: 0
+        with:
+          fetch-depth: 2
 
       - 
         name: Find the latest release mbed-os version
