--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,10 +50,7 @@ jobs:
         id: mbed_os_version
         shell: bash
         run: |
-          set +x
-          ls
-          git tag
-          value=`git describe --tags --abbrev=0`
+          value=`git describe --tags --abbrev=0  --match mbed-os-*.[0-9]`
           echo "TAG is $value"
           echo "::set-output name=tag::$value"
 
