--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -231,7 +231,7 @@ jobs:
             set -e
             echo "::set-output name=STATUS::failed"
             uname -m
-            ./mbed-os-env/test.sh ${{ steps.build_info.outputs.MBED_OS_VERSION }}
+            ./docker_images/mbed-os-env/test.sh ${{ steps.build_info.outputs.MBED_OS_VERSION }}
             echo "::set-output name=STATUS::passed"
             
       
