--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+        - run: git checkout HEAD^
 
       - 
         name: Find the latest release mbed-os version
