--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-        - run: git checkout HEAD^
+
+      - run: git fetch --prune --unshallow
 
       - 
         name: Find the latest release mbed-os version
