--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -145,8 +145,7 @@ jobs:
         id: docker_build_dev
         with:
           context: .
-          platforms: linux/amd64
-          # platforms: linux/amd64,linux/arm64 
+          platforms: linux/amd64,linux/arm64 
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
@@ -161,8 +160,7 @@ jobs:
       STATUS: ${{ steps.test.outputs.STATUS }}
     strategy:
       matrix:
-        #platform: [linux/amd64, linux/arm64]
-        platform: [linux/amd64]
+        platform: [linux/amd64, linux/arm64]
         
     steps:
       - 
