--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -121,13 +121,16 @@ jobs:
       - 
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-        
+
       - 
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          # username: ${{ secrets.DOCKERHUB_USERNAME }}
+          # password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       -
         name: Checkout
@@ -145,7 +148,8 @@ jobs:
         id: docker_build_dev
         with:
           context: .
-          platforms: linux/amd64,linux/arm64 
+          # platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
@@ -160,7 +164,8 @@ jobs:
       STATUS: ${{ steps.test.outputs.STATUS }}
     strategy:
       matrix:
-        platform: [linux/amd64, linux/arm64]
+        # platform: [linux/amd64, linux/arm64]
+        platform: [linux/amd64]
         
     steps:
       - 
