--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -152,7 +152,7 @@ jobs:
           platforms: linux/amd64
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
-          tags: ${{ github.repository_owner }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          tags: ghcr.io/${{ github.repository_owner }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           # cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/mbed-os-env:latest
           cache-to: type=inline
 
