--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -129,8 +129,10 @@ jobs:
           # username: ${{ secrets.DOCKERHUB_USERNAME }}
           # password: ${{ secrets.DOCKERHUB_PASSWORD }}
           registry: docker.pkg.github.com
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+          # username: ${{ github.repository_owner }}
+          # password: ${{ secrets.GITHUB_TOKEN }}
 
       -
         name: Checkout
@@ -152,7 +154,8 @@ jobs:
           platforms: linux/amd64
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
-          tags: docker.pkg.github.com/${{ github.repository_owner }}/mbed-os/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          tags: docker.pkg.github.com/${{ github.repository }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          # tags: docker.pkg.github.com/${{ github.repository_owner }}/mbed-os/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           # cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/mbed-os-env:latest
           cache-to: type=inline
 
