--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -128,11 +128,23 @@ jobs:
         with:
           # username: ${{ secrets.DOCKERHUB_USERNAME }}
           # password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           # username: ${{ github.repository_owner }}
           # password: ${{ secrets.GITHUB_TOKEN }}
+
+      # - 
+      #   name: Login to DockerHub
+      #   uses: docker/login-action@v1 
+      #   with:
+      #     # username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     # password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      #     registry: docker.pkg.github.com
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      #     # username: ${{ github.repository_owner }}
+      #     # password: ${{ secrets.GITHUB_TOKEN }}
 
       -
         name: Checkout
@@ -154,10 +166,26 @@ jobs:
           platforms: linux/amd64
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
-          tags: docker.pkg.github.com/${{ github.repository }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          tags: ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           # tags: docker.pkg.github.com/${{ github.repository_owner }}/mbed-os/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           # cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/mbed-os-env:latest
           cache-to: type=inline
+
+
+      # -
+      #   name: Build with remote cache
+      #   uses: docker/build-push-action@v2
+      #   id: docker_build_dev
+      #   with:
+      #     context: .
+      #     # platforms: linux/amd64,linux/arm64
+      #     platforms: linux/amd64
+      #     push: true
+      #     file: ./docker_images/mbed-os-env/Dockerfile
+      #     tags: docker.pkg.github.com/${{ github.repository }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+      #     # tags: docker.pkg.github.com/${{ github.repository_owner }}/mbed-os/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+      #     # cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/mbed-os-env:latest
+      #     cache-to: type=inline
 
 
   test-container:
