--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -249,6 +249,7 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
