--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -164,9 +164,24 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           # platforms: linux/amd64
-          load: true
+          # load: true - not supported for multi arch
+          push: true
           file: ./docker_images/mbed-os-env/Dockerfile
           tags: ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          # tags: docker.pkg.github.com/${{ github.repository_owner }}/mbed-os/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:latest
+          cache-to: type=inline
+
+      -
+        name: Build with remote cache
+        uses: docker/build-push-action@v2
+        id: docker_build_dev
+        with:
+          context: .
+          platforms: linux/amd64
+          load: true
+          file: ./docker_images/mbed-os-env/Dockerfile
+          tags: ghcr.io/${{ github.actor }}/mbed-os-env:test
           # tags: docker.pkg.github.com/${{ github.repository_owner }}/mbed-os/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:latest
           cache-to: type=inline
@@ -174,8 +189,8 @@ jobs:
       - name: Check if we need to rebuild
         id: check-need-build
         run: |
-          docker manifest inspect ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
-          docker manifest inspect ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }}
+          docker manifest inspect ghcr.io/${{ github.actor }}/mbed-os-env:test
+        # docker manifest inspect ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }}
 
       # -
       #   name: Build with remote cache
