pr test improvement

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -167,7 +167,7 @@ jobs:
           # load: true - not supported for multi arch
           push: true
           file: ./docker_images/mbed-os-env/Dockerfile
-          tags: ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          tags: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           # tags: docker.pkg.github.com/${{ github.repository_owner }}/mbed-os/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:latest
           cache-to: type=inline
