--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-          depth: 0
+        with:
+          fetch-depth: 0
 
       # - run: git fetch --prune --unshallow
 
