pr test improvement

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,27 @@ on:
   workflow_dispatch:
 
 jobs:
+  init:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Find DOCKER DIGEST trying to publish (if exists in docker hub)
+        id: docker_info_prod
+        run: |
+          docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env:latest --raw
+          DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env:latest --raw)
+          echo "Docker DIGEST: $DIGEST"
+          echo "::set-output name=DIGEST::$DIGEST"
+          echo "Docker DIGEST: $DIGEST"
+
+      # - 
+      #   name: Find DEV DOCKER DIGEST
+      #   id: docker_info_dev
+      #   run: |
+      #     DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }} -p ${{ matrix.platform }} )
+      #     echo "::set-output name=DIGEST::$DIGEST"
+      #     echo "Docker DIGEST: $DIGEST"
+
   prepare-tags:
     runs-on: ubuntu-latest
 
@@ -247,7 +268,6 @@ jobs:
       - 
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-        
       # no need to test (nor publish) if we already have the same image in dockerhub
       - if: steps.docker_info_prod.outputs.DIGEST != steps.docker_info_dev.outputs.DIGEST
         name: test the container
