--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,6 +109,9 @@ jobs:
   build-container:
     runs-on: ubuntu-latest
     needs: prepare-tags
+    outputs:
+      DEV_DIGEST: ${{ steps.docker_info_dev.outputs.DIGEST }}
+      PROD_DIGEST: ${{ steps.docker_info_prod.outputs.DIGEST }}
 
     steps:
       - 
@@ -184,7 +187,23 @@ jobs:
           cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/mbed-os-env:latest
           cache-to: type=inline
 
-    
+      -
+        name: Find DOCKER DIGEST trying to publish (if exists in docker repository)
+        id: docker_info_prod
+        run: |
+          DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }} | jq ".Digest")
+          echo "::set-output name=DIGEST::$DIGEST"
+          echo "Docker DIGEST: $DIGEST"
+
+      - 
+        name: Find DEV DOCKER DIGEST
+        id: docker_info_dev
+        run: |
+          DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env:${{ steps.build_info.outputs.DOCKER_DEV_TAG }} | jq ".Digest")
+          echo "Docker DIGEST: $DIGEST"
+          echo "::set-output name=DIGEST::$DIGEST"
+          echo "Docker DIGEST: $DIGEST"
+
       # -
       #   name: Build with remote cache
       #   uses: docker/build-push-action@v2
@@ -202,6 +221,7 @@ jobs:
 
 
   test-container:
+  - if: build-container.outputs.DEV_DIGEST != build-container.outputs.PROD_DIGEST
     runs-on: ubuntu-latest
     needs: build-container
     outputs:
@@ -234,8 +254,6 @@ jobs:
           value=`cat mbed_os_version`
           echo "::set-output name=MBED_OS_VERSION::$value"
 
-
-
       - 
         name: Checkout
         uses: actions/checkout@v2
@@ -248,28 +266,30 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - 
-        name: Find DOCKER DIGEST trying to publish (if exists in docker hub)
-        id: docker_info_prod
-        run: |
-          DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env -t ${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }} -p ${{ matrix.platform }} )
-          echo "::set-output name=DIGEST::$DIGEST"
-          echo "Docker DIGEST: $DIGEST"
+      # - 
+      #   name: Find DOCKER DIGEST trying to publish (if exists in docker hub)
+      #   id: docker_info_prod
+      #   run: |
+      #     DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env -t ${{ steps.build_info.outputs.DOCKER_PROD_TAG_LATEST }} -p ${{ matrix.platform }} )
+      #     echo "::set-output name=DIGEST::$DIGEST"
+      #     echo "Docker DIGEST: $DIGEST"
 
-      - 
-        name: Find DEV DOCKER DIGEST
-        id: docker_info_dev
-        run: |
-          DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }} -p ${{ matrix.platform }} )
-          echo "::set-output name=DIGEST::$DIGEST"
-          echo "Docker DIGEST: $DIGEST"
+      # - 
+      #   name: Find DEV DOCKER DIGEST
+      #   id: docker_info_dev
+      #   run: |
+      #     DIGEST=$(python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} get-digest -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }} -p ${{ matrix.platform }} )
+      #     echo "::set-output name=DIGEST::$DIGEST"
+      #     echo "Docker DIGEST: $DIGEST"
 
 
       - 
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+
       # no need to test (nor publish) if we already have the same image in dockerhub
-      - if: steps.docker_info_prod.outputs.DIGEST != steps.docker_info_dev.outputs.DIGEST
+      - 
+      # if: steps.docker_info_prod.outputs.DIGEST != steps.docker_info_dev.outputs.DIGEST
         name: test the container
         id: test
         uses: addnab/docker-run-action@v2
