--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -221,7 +221,7 @@ jobs:
 
 
   test-container:
-  - if: build-container.outputs.DEV_DIGEST != build-container.outputs.PROD_DIGEST
+  - if: needs.build-container.outputs.DEV_DIGEST != needs.build-container.outputs.PROD_DIGEST
     runs-on: ubuntu-latest
     needs: build-container
     outputs:
