--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -220,8 +220,8 @@ jobs:
       #     cache-to: type=inline
 
 
+- if: build-container.outputs.DEV_DIGEST != build-container.outputs.PROD_DIGEST
   test-container:
-  - if: needs.build-container.outputs.DEV_DIGEST != needs.build-container.outputs.PROD_DIGEST
     runs-on: ubuntu-latest
     needs: build-container
     outputs:
