--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,18 +34,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  init:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Find DOCKER DIGEST trying to publish (if exists in docker hub)
-        id: docker_info_prod
-        run: |
-          # docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:latest --raw
-          DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:latest | jq ".Digest")
-          echo "Docker DIGEST: $DIGEST"
-          echo "::set-output name=DIGEST::$DIGEST"
-          echo "Docker DIGEST: $DIGEST"
+  # init:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     -
+  #       name: Find DOCKER DIGEST trying to publish (if exists in docker hub)
+  #       id: docker_info_prod
+  #       run: |
+  #         # docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:latest --raw
+  #         DIGEST=$(docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} inspect docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:latest | jq ".Digest")
+  #         echo "Docker DIGEST: $DIGEST"
+  #         echo "::set-output name=DIGEST::$DIGEST"
+  #         echo "Docker DIGEST: $DIGEST"
 
       # - 
       #   name: Find DEV DOCKER DIGEST
@@ -220,10 +220,11 @@ jobs:
       #     cache-to: type=inline
 
 
-- if: build-container.outputs.DEV_DIGEST != build-container.outputs.PROD_DIGEST
+- 
   test-container:
     runs-on: ubuntu-latest
     needs: build-container
+    if: ${{ needs.build-container.outputs.DEV_DIGEST }} != ${{ needs.build-container.outputs.PROD_DIGEST }}
     outputs:
       STATUS: ${{ steps.test.outputs.STATUS }}
     strategy:
