--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -224,7 +224,7 @@ jobs:
   test-container:
     runs-on: ubuntu-latest
     needs: build-container
-    if: ${{ needs.build-container.outputs.DEV_DIGEST }} != ${{ needs.build-container.outputs.PROD_DIGEST }}
+    if: needs.build-container.outputs.DEV_DIGEST != needs.build-container.outputs.PROD_DIGEST
     outputs:
       STATUS: ${{ steps.test.outputs.STATUS }}
     strategy:
