--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -224,7 +224,7 @@ jobs:
   test-container:
     runs-on: ubuntu-latest
     needs: build-container
-    if: needs.build-container.outputs.DEV_DIGEST != needs.build-container.outputs.PROD_DIGEST
+    # if: needs.build-container.outputs.DEV_DIGEST != needs.build-container.outputs.PROD_DIGEST
     outputs:
       STATUS: ${{ steps.test.outputs.STATUS }}
     strategy:
@@ -296,7 +296,8 @@ jobs:
         uses: addnab/docker-run-action@v2
         with:
           options: -v ${{ github.workspace }}:/work -w=/work
-          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
+          # image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
+          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           shell: bash
           run: |
             set -e
@@ -349,15 +350,16 @@ jobs:
         run: |
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:failed-${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
 
-      - name: Delete image
-        uses: bots-house/ghcr-delete-image-action@v1.0.0
-        with:
-          # NOTE: at now only orgs is supported
-          owner: ${{ github.actor }}
-          name: ghcr.io/${{ github.actor }}/mbed-os-env-tmp
-          # NOTE: using Personal Access Token
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+
+      # - name: Delete image
+      #   uses: bots-house/ghcr-delete-image-action@v1.0.0
+      #   with:
+      #     # NOTE: at now only orgs is supported
+      #     owner: ${{ github.actor }}
+      #     name: ghcr.io/${{ github.actor }}/mbed-os-env-tmp
+      #     # NOTE: using Personal Access Token
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     tag: ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
 
       # - 
       #   name: Delete Dev Tag
