--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -259,13 +259,7 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
 
-      - 
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+
 
       # - 
       #   name: Find DOCKER DIGEST trying to publish (if exists in docker hub)
@@ -288,12 +282,22 @@ jobs:
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
+      # - 
+      #   name: Login to DockerHub
+      #   uses: docker/login-action@v1 
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+
       # no need to test (nor publish) if we already have the same image in dockerhub
       - 
       # if: steps.docker_info_prod.outputs.DIGEST != steps.docker_info_dev.outputs.DIGEST
         name: test the container
         id: test
-        uses: addnab/docker-run-action@v2
+        uses: addnab/docker-run-action@v3
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
         with:
           options: -v ${{ github.workspace }}:/work -w=/work
           # image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
