--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -282,13 +282,13 @@ jobs:
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
-      # - 
-      #   name: Login to DockerHub
-      #   uses: docker/login-action@v1 
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - 
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # no need to test (nor publish) if we already have the same image in dockerhub
       - 
@@ -303,7 +303,7 @@ jobs:
           options: -v ${{ github.workspace }}:/work -w=/work
 
           # image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp@${{ steps.docker_info_dev.outputs.DIGEST }}
-          image: ${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+          image: ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
           shell: bash
           run: |
             set -e
