--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -357,10 +357,10 @@ jobs:
           docker run quay.io/skopeo/stable --src-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} --dest-creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} copy --all docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}  docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:failed-${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
 
 
-      - 
-        name: delete dev image
-        run: |
-          docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} delete docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+      # - 
+      #   name: delete dev image
+      #   run: |
+      #     docker run quay.io/skopeo/stable --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} delete docker://ghcr.io/${{ github.actor }}/mbed-os-env-tmp:${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
 
       # - name: Delete image
       #   uses: bots-house/ghcr-delete-image-action@v1.0.0
@@ -372,7 +372,7 @@ jobs:
       #     token: ${{ secrets.GITHUB_TOKEN }}
       #     tag: ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
 
-      # - 
-      #   name: Delete Dev Tag
-      #   run: |
-      #     python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} delete-tag -r mbed-os-env -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
+      - 
+        name: Delete Dev image
+        run: |
+          python ./.github/workflows/ci_scripts/docker_hub_utils.py -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} delete-image -r mbed-os-env-tmp -t ${{ steps.build_info.outputs.DOCKER_DEV_TAG }}
