--- a/.github/workflows/docker_management/test-PR.yml
+++ b/.github/workflows/docker_management/test-PR.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
     paths:
       - docker_images/mbed-os-env/**
-      - .github/workflows/**
+      - .github/workflows/docker_management/**
 
 jobs:
 
